<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mad</string>
    <string name="textView6">Lets Start Your Order </string>
    <string name="Username">Username</string>
    <string name="Pw">Password</string>
    <string name="checkBtn">Remember me</string>
    <string name="login">Login</string>
    <string name="CreateAcc">Create An Account</string>
    <string name="ForgotPw">Forgot Password?</string>
    <string name="textView2">Powered by MADDOC Creations</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone No</string>
    <string name="password">Password</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="BCM">BECOME A MEMBER</string>
    <string name="rbtn">Register</string>
    <string name="MyAccount">MY ACCOUNT</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="pno">Phone Number</string>
    <string name="em">Email</string>
    <string name="exfname">Hiruth</string>
    <string name="exlname">Hasaral</string>
    <string name="expno">0771234567</string>
    <string name="exemail">Hiruth@gmail.com</string>
    <string name="mmenu">Main Menu</string>
    <string name="del">Delete</string>
    <string name="deleteAc">Delete Account</string>
    <string name="editAcc">Update Account</string>
    <string name="psw">Password</string>
    <string name="conpsw">Confirm Password</string>
    <string name="expsw">**********</string>
    <string name="AcName">Hi Hiruth</string>
    <string name="myAcc">My Account</string>
    <string name="logout">Log Out</string>
    <string name="food">Food</string>
    <string name="DnB">Dessert and Beverages</string>
    <string name="rice">Rice</string>
    <string name="line">__________________________________</string>
    <string name="noodles">Noodles</string>
    <string name="chickenrice">Chicken Rice</string>
    <string name="crprice">Rs. 350.00</string>
    <string name="addtocart">Add to Cart</string>
    <string name="porkrice">Pork Rice</string>
    <string name="porkprice">Rs. 550.00</string>
    <string name="Cnoodles">Chicken Noodles</string>
    <string name="longline">_______________________________________________________</string>
    <string name="reviews">My Reviews</string>
    <string name="adminlogin">Login as Admin</string>
    <string name="edit">Edit</string>
    <string name="deletemenu">Delete</string>
    <string name="View">VIiew</string>
    <string name="Kottu">Kottu</string>
    <string name="VIEW">View</string>
    <string name="Beverages">Beverages</string>
    <string name="footer_text">Powered By MADDOC Creations</string>
    <string name="header1">FEEDBACK</string>
    <string name="txttype">Type</string>
    <string name="fnametxt">First Name</string>
    <string name="lnametxt">Last Name</string>
    <string name="pnotxt">Phone Number</string>
    <string name="email1">Email</string>
    <string name="mess">Message</string>
    <string name="datetxt">Date</string>
    <string name="myriewhead">MY REVIEWS</string>
    <string name="rating">Star Rating</string>
    <string name="cusReview">CUSTOMER REVIEWS</string>
    <string name="myReviewHeader">MY RIVIEWS</string>
    <string name="MyReviewHead">MY REVIEWS</string>
    <string name="nametxt">Name</string>
    <string name="up_rev_head">EDIT REVIEW</string>
    <string name="up_sub_buttn">SUBMIT</string>
    <string name="Review_message">Message</string>
    <string name="Review_date">Date</string>
    <string name="Customer_name">Name</string>
    <string name="my_rev_date">Date</string>
    <string name="my_rev_message">Message</string>
    <string name="edit_buttn">EDIT</string>
    <string name="Delete_buttn">DELETE</string>
    <string name="ed_rev_message">Message</string>
    <string name="message_hint">Enter your message</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email address</string>
    <string name="date_hint">Enter Date</string>
    <string name="submit">SUBMIT</string>
    <string name="Rev_header">REVIEW</string>
    <string name="rev_button">ADD REVIEW</string>
    <string name="rev_button_cus">CUSTOMER REVIEWS</string>
    <string name="rev_button_my">MY REVIEWS</string>
    <string name="Add">Add</string>
    <string name="foodname">Name</string>
    <string name="foodprice">Price</string>
    <string name="Addfood">Add Food</string>
    <string name="addItems">Add Items to Categories</string>
    <string name="Reviews">Reviews</string>
</resources>