<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/up_rev_head"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/date_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_mess"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/message_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:text="@string/ed_rev_message" />

    <Button
        android:id="@+id/edit_subbttn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="30dp"
        android:background="@color/teal_200"
        android:text="@string/up_sub_buttn"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>